<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="8dp"
    tools:context=".screens.addtask.AddTaskFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_add_your_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/droid_sans"
        android:text="@string/add_your_task"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/title_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/transparent_bg"
        android:hint="@string/title"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_t"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_your_task" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/task_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/transparent_bg"
        android:hint="@string/task"
        android:minHeight="100dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_t"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_ed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_choose_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/droid_sans"
        android:text="@string/choose_difficulty"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_ed" />

    <RadioGroup
        android:id="@+id/rg_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_difficulty">

        <RadioButton
            android:id="@+id/rb_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/droid_sans"
            android:text="@string/easy"
            android:textColor="@color/black_t" />

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_sans"
            android:text="@string/medium"
            android:textColor="@color/black_t" />

        <RadioButton
            android:id="@+id/rb_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_sans"
            android:text="@string/hard"
            android:textColor="@color/black_t" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>